Created index.html outline and styles

--- a/src/chat/templates/chat/base.html
+++ b/src/chat/templates/chat/base.html
@@ -5,13 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce</title>
+    <title>CHAT</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'chat/css/base.css' %}">
     <link rel="stylesheet" href="{% static 'chat/css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'chat/css/signup.css' %}">
     <link rel="stylesheet" href="{% static 'chat/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'chat/css/index.css' %}">
 
     <!-- Vue JS -->
     <script src="{% static 'chat/js/vue.js' %}"></script>
