--- a/src/chat/templates/chat/index.html
+++ b/src/chat/templates/chat/index.html
@@ -1,7 +1,33 @@
 {% extends './base.html' %}
 
 {% block content %}
-<div id="index">
-  <h1>Index</h1>
+<div class="index">
+  <div class="left">
+    <div class="search">
+      <input type="text" class="search-input" placeholder="search..."/>
+      <div class="search-results"></div>
+    </div>
+    <div class="contacts">
+      <table>
+        <tr class="choices">
+          <td class="rooms">Rooms</td>
+          <td class="friends">Friends</td>
+        </tr>
+      </table>
+      <div class="rooms">Rooms</div>
+      <div class="friends">Friends</div>
+    </div>
+  </div>
+  <div class="right">
+    <div class="room">
+      <div class="options"></div>
+      <div class="chat">
+        <div class="messages"></div>
+        <div class="message-input">
+          <input type="text" id="message-input" max_length="400" placeholder="..."/>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock content %}
